<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:orientation="vertical"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="indiana.edu.volumeprofilemanager.actDefineProfile">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/label_prof_name"
        android:id="@+id/txtProfName"
        android:paddingLeft="0dp"
        android:paddingTop="0dp" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/inputProfName"
        android:singleLine="true"
        android:imeOptions="actionDone"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/label_ringtone"
        android:id="@+id/txtRingtone"
        android:paddingTop="8dp"
        android:paddingLeft="3dp" />

    <SeekBar
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/seekBarRingtone"
        android:paddingTop="0dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/label_media"
        android:id="@+id/txtMedia"
        android:paddingTop="0dp"
        android:paddingLeft="3dp" />

    <SeekBar
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/seekBarMedia"
        android:paddingTop="0dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/label_alarm"
        android:id="@+id/txtAlarm"
        android:paddingTop="0dp"
        android:paddingLeft="3dp" />

    <SeekBar
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/seekBarAlarm"
        android:paddingTop="0dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/label_in_call"
        android:id="@+id/txtInCall"
        android:paddingTop="0dp"
        android:paddingLeft="3dp" />

    <SeekBar
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/seekBarInCall"
        android:paddingTop="0dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/label_notifications"
        android:id="@+id/txtNotif"
        android:paddingTop="0dp"
        android:paddingLeft="3dp" />

    <SeekBar
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/seekBarNotifications"
        android:paddingTop="0dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/label_system"
        android:id="@+id/txtSystem"
        android:paddingTop="0dp"
        android:paddingLeft="3dp" />

    <SeekBar
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/seekBarSystem"
        android:paddingTop="0dp"
        android:paddingBottom="8dp"/>

    <CheckBox
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/label_vibrate"
        android:id="@+id/chkVibrate"
        android:textSize="18dp" />

    <LinearLayout
        android:id="@+id/LinearLayout02"
        android:layout_height="wrap_content"
        android:layout_width="fill_parent"
        android:layout_alignParentBottom="true"
        android:gravity="bottom"
        android:layout_weight="1">

        <!-- This may not work TODO-->
        <Button
            android:id="@+id/btnSaveProfile"
            android:layout_width="wrap_content"
            android:layout_height="55dp"
            android:layout_weight="1"
            android:text="@string/label_save">
        </Button>
        <Button
            android:id="@+id/btnCancelProfile"
            android:layout_width="wrap_content"
            android:layout_height="55dp"
            android:layout_weight="1"
            android:text="@string/label_cancel">
        </Button>
    </LinearLayout>
</LinearLayout>


